HMAN-164 - Update with code review comments